--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
 
-    id 'com.github.johnrengelman.shadow' version '7.0.0'
+    id 'com.github.johnrengelman.shadow' version '6.0.0'
 }
 
 group('store.seasonlabs')
@@ -32,6 +32,12 @@ dependencies {
 
 shadowJar {
     archiveName("${project.name}-${project.version}.jar")
+
+    relocate 'com.henryfabio.sqlprovider', 'store.seasonlabs.api.libraries.sqlprovider'
+    relocate 'me.saiintbrisson.minecraft.command', 'store.seasonlabs.api.libraries.command.common'
+    relocate 'me.saiintbrisson.bukkit.command', 'store.seasonlabs.api.libraries.command.bukkit'
+
+
 }
 
 tasks {
